--- a/quiz/templates/play.html
+++ b/quiz/templates/play.html
@@ -42,17 +42,17 @@
       </div>
     </template>
     <template id="__template_icon_submit">
-      <svg width="16" height="16" fill="currentColor">
+      <svg width="2em" height="2em" fill="currentColor">
         <use href="{{ url_for('static', filename='icons.svg') }}#__icon_submit" />
       </svg>
     </template>
     <template id="__template_icon_arrows">
-      <svg width="16" height="16" fill="currentColor">
+      <svg width="2em" height="2em" fill="currentColor">
         <use href="{{ url_for('static', filename='icons.svg') }}#__icon_arrows" />
       </svg>
     </template>
     <template id="__template_icon_discard">
-      <svg width="16" height="16" fill="currentColor">
+      <svg width="2em" height="2em" fill="currentColor">
         <use href="{{ url_for('static', filename='icons.svg') }}#__icon_discard" />
       </svg>
     </template>
